--- a/wercker.yml
+++ b/wercker.yml
@@ -23,7 +23,7 @@ create-atp-instance:
       server: $KUBERNETES_MASTER
       token: $KUBERNETES_TOKEN
       insecure-skip-tls-verify: true
-      command: create -f ./ex-atp-instance-plain.yaml
+      command: create -f ./atp-instance-plain.yaml
 
 connect-to-existing-atp-instance:
   box:
